Setup basic POST component

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 </head>
 <body>
   <div id="app">
-    <TestComponent />
+    <postcomponent />
+    <getcomponent />
   </div>
   <script type="module" src="/src/app.js"></script>
 </body>
